feat: 新增 5 支 foodRecord api
1. 新增 5 支 foodRecord api > 取得登入會員所有美食紀錄、取得指定的單筆美食紀錄、新增單筆美食紀錄、修改單筆美食紀錄、(偽)刪除單筆美食紀錄
2. 撰寫 swagger 註解
3. 新增 Tool.findArrayModelsByIdsAndReturn 會驗證 id 和返回資料
